@@ -890,6 +890,13 @@
         <branch name="HEAD"/>
         <regenerate/>
       </component>
+      <component name="gimp-tiny-fu" dir="gimp-tiny-fu" group="extras">
+        <podir dir="po"/>
+        <potname name="plugin_name.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
       <component name="gimp-tips" dir="gimp" group="extras">
         <podir dir="po-tips"/>
         <potname name="gimp20-tips.pot"/>
