@@ -1,3 +1,7 @@
+2005-07-29  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added gimp-tiny-fu.
+
 2005-07-27  Danilo Šegan  <danilo@gnome.org>
 
 	Final modules decision for Gnome 2.12.
